chrome/service/service_utility_process_host.h
@@ -15,7 +15,6 @@
 #include "content/public/common/child_process_host_delegate.h"
 #include "ipc/ipc_platform_file.h"
 #include "mojo/edk/embedder/outgoing_broker_client_invitation.h"
-#include "services/service_manager/public/mojom/service.mojom.h"
 
 namespace base {
 class CommandLine;
@@ -26,6 +25,7 @@ class SingleThreadTaskRunner;
 
 namespace content {
 class ChildProcessHost;
+class ServiceManagerConnection;
 }
 
 namespace printing {
@@ -34,6 +34,10 @@ struct PdfRenderSettings;
 struct PrinterCapsAndDefaults;
 struct PrinterSemanticCapsAndDefaults;
 }  // namespace printing
+
+namespace service_manager {
+class ServiceManager;
+}
 
 // Acts as the service-side host to a utility child process. A
 // utility process is a short-lived sandboxed process that is created to run
@@ -161,7 +165,9 @@ class ServiceUtilityProcessHost : public content::ChildProcessHostDelegate {
   class PdfToEmfState;
   std::unique_ptr<PdfToEmfState> pdf_to_emf_state_;
 
-  service_manager::mojom::ServicePtr utility_process_connection_;
+  std::unique_ptr<service_manager::ServiceManager> service_manager_;
+  std::unique_ptr<content::ServiceManagerConnection>
+      service_manager_connection_;
 
   base::WeakPtrFactory<ServiceUtilityProcessHost> weak_ptr_factory_;
 
