content/child/child_thread_impl.h
@@ -33,7 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "services/resource_coordinator/public/cpp/tracing/chrome_trace_event_agent.h"
 
 #if defined(OS_WIN)
-#include "content/common/font_cache_win.mojom.h"
+#include "content/public/common/font_cache_win.mojom.h"
 #endif
 
 namespace base {
